Implement the following into the system:
1. **Real-Time Collaboration**
   • CRDT-based shared cursors, live chat, presence indicators (Yjs over WebSockets)
   • Conflict resolution and offline sync

2. **Language Environments**
   • Containerized shells for 50+ languages via Nix
   • Automatic dependency caching and versioning

3. **IDE Workspace**
   • Monaco editor with AI-driven inline suggestions
   • Integrated terminal, resource monitoring dashboards

4. **Hosting & Preview**
   • Live web preview pane
   • One-click HTTPS deployment, custom domains, “Always On” services

5. **Secrets & Environment**
   • AES-256 encrypted vault, TLS-secured
   • Per-project and per-account environment variables

6. **Version Control**
   • Git CLI/GUI: clone, commit, branch, merge, revert
   • “Import from GitHub” wizard with OAuth integration

7. **Debugging & Testing**
   • Breakpoint debugger across major runtimes
   • Zero-config unit/integration test generation

8. **AI-Powered Assistance**
   • Ollama-powered Agents for code completion, refactoring, bug fixes
   • Natural-language “Agent” to scaffold apps, add complex features
   • Document/PDF RAG: ingest docs, answer queries, auto-populate knowledge

9. **Custom Workflows & API**
   • User-configurable run commands, pre/post hooks
   • CLI tool (“qcdev”) and REST/WebSocket APIs for automation

10. **Ecosystem & Extensions**
    • Starter templates and community marketplace
    • Plugin architecture for custom language servers and external APIs

CONSTRAINTS & ARCHITECTURE:
- Frontend: Next.js + React + Tailwind CSS
- Backend: Node.js/Express microservices, Docker Compose, Redis for sessions
- Collaboration: Yjs CRDT
- RAG: Self-hosted vector store + LangChain pipelines
- CI/CD: GitHub Actions + Docker Hub

OUTPUT:
1. High-level system diagram in Markdown
2. File/directory scaffold with all key config files
3. Sample code for collaboration engine, secrets vault, AI agent integration
4. Deployment scripts (Docker Compos

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,94 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
+.yarn/install-state.gz
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js build output
 /.next/
 /out/
 
-# production
+# Production build artifacts
 /build
+/dist
 
-# misc
+# Miscellaneous
 .DS_Store
 *.pem
 
-# debug
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# vercel
-.vercel
+# OS generated files
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Environment variables
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-.genkit/*
-.env*
+# IDE config
+.idea/
+.vscode/*
+!.vscode/settings.json # Keep project-specific VSCode settings if desired
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Terraform state
+.terraform/
+*.tfstate
+*.tfstate.*.backup
+crash.log
+override.tf
+override.tf.json
+_override.tf
+_override.tf.json
+*.tfvars
+*.tfvars.json
+.terraform.lock.hcl
+
+# Firebase emulator
+*.log
+firebase-debug.log
+firestore-debug.log
+ui-debug.log
+pubsub-debug.log
+database-debug.log
+storage-debug.log
+*.snapshot
+
+# Genkit generated files (if any)
+# .genkit/
+
+# Nix build artifacts
+/result*
+/.direnv/
+
+# Service specific build outputs/data (already ignored in their respective .gitignores, but good practice here too)
+/services/*/dist
+/services/*/node_modules
+/services/*/yjs-db # Example local data
+
+# Optional: Comment out if you want to commit package-lock.json (recommended)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
