--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "y-webrtc": "^10.3.0",
+    "y-websocket": "^2.0.3",
+    "yjs": "^13.6.18",
     "zod": "^3.24.2"
   },
   "devDependencies": {
