--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "retro-ide",
   "version": "0.1.0",
@@ -57,7 +58,8 @@
     "y-webrtc": "^10.3.0",
     "y-websocket": "^2.0.3",
     "yjs": "^13.6.18",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@monaco-editor/react": "^4.6.0"
   },
   "devDependencies": {
     "@types/node": "^20",
