--- a/package.json
+++ b/package.json
@@ -39,14 +39,19 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "firebase": "^11.3.0",
     "genkit": "^1.6.2",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.475.0",
+    "monaco-editor": "^0.51.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
+    "prom-client": "^15.1.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -55,6 +60,10 @@
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
+    "y-leveldb": "^0.1.0",
+    "y-monaco": "^0.1.5",
+    "y-protocols": "^1.0.6",
     "y-webrtc": "^10.3.0",
     "y-websocket": "^2.0.3",
     "yjs": "^13.6.18",
@@ -62,9 +71,13 @@
     "@monaco-editor/react": "^4.6.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/crypto-js": "^4.2.2",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.11",
     "genkit-cli": "^1.6.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
